# mind-genomics-survey

./: LICENSE  README.md  app.py  database.py  generate_radom_survey.py  pyproject.toml
templates/: banner.html  bootstrap.html  footer.html  home.html  nav.html  style.html  survey.html  survey_questions.html  survey_submitted.html
