[tool.poetry]
name = "repl_nix_mind-genomics-survey"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
Flask-Cors = "^4.0.0"
SQLAlchemy = "^2.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
